Prevent zoom on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -1,13 +1,13 @@
 body {
     padding: 0%;
     margin: 0%;
-    background-color: #131313;
+    background-color: #131313;  
 }
 
 #preventOverflow {
-    overflow-y: hidden;
+    overflow: hidden;
     height: 100vh;
-
+    width: 100vw;
 }
 
 html::-webkit-scrollbar {
